added various refactors